--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,4 @@
-# .github/workflows/ci-cd.yml
-name: CI/CD – Tests + Lint + Security + Deploy
+name: CI/CD Pipeline
 
 on:
   push:
@@ -17,7 +16,7 @@ jobs:
           ruby-version: '3.4.6'
           bundler-cache: true
       - run: bundle install
-      - name: RuboCop
+      - name: Run RuboCop
         run: bundle exec rubocop --parallel
 
   test:
@@ -48,12 +47,12 @@ jobs:
         run: |
           bin/rails db:create
           bin/rails db:migrate
-          bundle exec rspec || true   # passes even if no tests yet
+          bundle exec rspec spec/models/user_spec.rb
 
   deploy:
     needs: [lint, test]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to Render
+      - name: Trigger Render Deploy
         run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
